[tool.poetry]
name = "scrapekayak-071022"
version = "0.1.0"
description = ""
authors = ["yvan <yvanscher@gmail.com>"]
readme = "README.md"
packages = [{include = "scrapekayak_071022"}]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
selenium = "^4.5.0"
webdriver-manager = "^3.8.3"
lxml = "^4.9.1"
numpy = "^1.23.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
